# MindSprint

./: README.md  pyproject.toml  requirements.txt
Backend/: collections.py  crud.py  db.py  main.py  schemas.py
Frontend/: app.py
